--- a/css/style.css
+++ b/css/style.css
@@ -279,8 +279,7 @@ body {
 
 .header {
   position: relative;
-  height: 100vh;
-  background: radial-gradient(60% 70% at 0 100%, #f69e89 0, rgba(246, 158, 136, 0) 100%), radial-gradient(50% 115% at 100% 100%, rgba(35, 166, 176, 0.5) 0, rgba(35, 166, 176, 0.15) 50%, rgba(35, 166, 176, 0) 100%), #0f6973; }
+  height: 100vh; }
   .header__text {
     width: 100%;
     position: absolute;
