--- a/css/style.css
+++ b/css/style.css
@@ -1263,12 +1263,16 @@ body {
         border: 1px solid #f5a08c; }
   .other__weather {
     padding: 2rem; }
+    .other__weather--img {
+      width: 50rem; }
+      .other__weather--img-animate {
+        animation: moveInUp 1s ease-in-out; }
     .other__weather--container {
       display: flex;
       justify-content: center;
       align-items: center;
       flex-wrap: wrap;
-      gap: 1.5rem; }
+      gap: 0.5rem; }
     .other__weather--input {
       font-size: 1.5rem;
       border: none;
@@ -1277,7 +1281,8 @@ body {
       padding: 1rem 2rem;
       background-color: rgba(255, 255, 255, 0.5);
       width: 30%;
-      display: block; }
+      display: block;
+      border-radius: 0.5rem; }
       .other__weather--input:focus {
         outline: none;
         border-bottom: 3px solid #f5a08c; }
@@ -1290,3 +1295,5 @@ body {
       display: flex;
       justify-content: cneter;
       align-items: center; }
+    .other__weather--btn-container {
+      text-align: center; }
