--- a/css/style.css
+++ b/css/style.css
@@ -1262,9 +1262,11 @@ body {
         transform: scale(1.1);
         border: 1px solid #f5a08c; }
   .other__weather {
-    padding: 2rem; }
+    padding: 2rem;
+    text-align: center; }
     .other__weather--img {
-      width: 50rem; }
+      width: 30rem;
+      margin: 2rem; }
       .other__weather--img-animate {
         animation: moveInUp 1s ease-in-out; }
     .other__weather--container {
@@ -1280,9 +1282,9 @@ body {
       font-family: inherit;
       padding: 1rem 2rem;
       background-color: rgba(255, 255, 255, 0.5);
-      width: 30%;
       display: block;
-      border-radius: 0.5rem; }
+      border-radius: 0.5rem;
+      height: 4rem; }
       .other__weather--input:focus {
         outline: none;
         border-bottom: 3px solid #f5a08c; }
@@ -1297,3 +1299,17 @@ body {
       align-items: center; }
     .other__weather--btn-container {
       text-align: center; }
+    .other__weather--response {
+      display: grid;
+      grid-template-columns: 3 1fr; }
+      .other__weather--response-item {
+        padding: 1rem;
+        text-align: center;
+        justify-content: right; }
+        .other__weather--response-item:first-child {
+          grid-column: 1 / 3; }
+
+.response {
+  font-size: 2rem !important;
+  color: #20c571 !important;
+  font-style: italic; }
