--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,11 @@ $breakpoint argument choices:
   padding: 0;
   box-sizing: border-box;
   -webkit-backface-visibility: hidden;
-  backface-visibility: hidden; }
+  backface-visibility: hidden;
+  text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  -moz-text-size-adjust: none;
+  -ms-text-size-adjust: none; }
 
 html {
   font-size: 62.5%;
